tests/snapshots/parser_snapshots__parse_scontrol_cluster_gpu_job.snap
---
source: tests/parser_snapshots.rs
expression: fields
---
- - Account
  - ml-lab
- - AccrueTime
  - "2026-06-28T08:00:00"
- - BatchFlag
  - "1"
- - BatchHost
  - gpu-node-01
- - Deadline
  - N/A
- - Dependency
  - (null)
- - EligibleTime
  - "2026-06-28T08:00:00"
- - EndTime
  - "2026-06-29T08:00:01"
- - ExitCode
  - "0:0"
- - Gres
  - "gpu:1"
- - GroupId
  - ml-lab(2000)
- - JobId
  - "48201"
- - JobName
  - train_resnet
- - JobState
  - RUNNING
- - MCS_label
  - N/A
- - MinCPUsNode
  - "2"
- - MinMemoryNode
  - 2G
- - MinTmpDiskNode
  - "0"
- - Nice
  - "0"
- - NodeList
  - gpu-node-01
- - NumCPUs
  - "2"
- - NumNodes
  - "1"
- - NumTasks
  - "2"
- - Partition
  - gpu
- - Priority
  - "18472"
- - QOS
  - high
- - Reason
  - None
- - Reboot
  - "0"
- - Requeue
  - "1"
- - Restarts
  - "0"
- - RunTime
  - "01:42:09"
- - StartTime
  - "2026-06-28T08:00:01"
- - StdErr
  - /home/alice/runs/resnet/slurm-48201.err
- - StdOut
  - /home/alice/runs/resnet/slurm-48201.out
- - SubmitTime
  - "2026-06-28T08:00:00"
- - TRES
  - "cpu=2,mem=2G,node=1,gres/gpu=1"
- - Task
  - "1"
- - TimeLimit
  - "1-00:00:00"
- - TimeMin
  - N/A
- - UserId
  - alice(1000)
- - WorkDir
  - /home/alice/runs/resnet
