tests/snapshots/parser_snapshots__parse_scontrol_running_job.snap
---
source: tests/parser_snapshots.rs
assertion_line: 51
expression: fields
---
- - Account
  - (null)
- - AccrueTime
  - "2024-01-15T10:19:13"
- - BatchFlag
  - "1"
- - BatchHost
  - node01
- - C
  - "0:0:*:*"
- - Command
  - /home/alice/script.sh
- - Contiguous
  - "0"
- - CoreSpec
  - "*"
- - Deadline
  - N/A
- - DelayBoot
  - "00:00:00"
- - Dependency
  - (null)
- - EligibleTime
  - "2024-01-15T10:19:13"
- - EndTime
  - Unknown
- - ExcNodeList
  - (null)
- - ExitCode
  - "0:0"
- - Features
  - (null)
- - GroupId
  - alice(1000)
- - JobId
  - "12345"
- - JobName
  - test_job
- - JobState
  - RUNNING
- - LastSchedEval
  - "2024-01-15T10:19:13"
- - Licenses
  - (null)
- - MCS_label
  - N/A
- - MinCPUsNode
  - "4"
- - MinMemoryNode
  - 8G
- - MinTmpDiskNode
  - "0"
- - Network
  - (null)
- - Nice
  - "0"
- - Node
  - "*"
- - NodeList
  - node01
- - NumCPUs
  - "4"
- - NumNodes
  - "1"
- - NumTasks
  - "1"
- - OverSubscribe
  - OK
- - Partition
  - debug
- - Priority
  - "4294901759"
- - QOS
  - normal
- - Reason
  - None
- - Reboot
  - "0"
- - ReqNodeList
  - (null)
- - Requeue
  - "1"
- - Reservation
  - (null)
- - Restarts
  - "0"
- - RunTime
  - "00:00:30"
- - SecsPreSuspend
  - "0"
- - Sid
  - "slurmctld:1"
- - StartTime
  - "2024-01-15T10:19:13"
- - StdErr
  - /home/alice/slurm-12345.err
- - StdIn
  - /dev/null
- - StdOut
  - /home/alice/slurm-12345.out
- - SubmitTime
  - "2024-01-15T10:19:13"
- - SuspendTime
  - None
- - T
  - "0:0:*:*"
- - TRES
  - "cpu=4,node=1"
- - Task
  - "4"
- - TimeLimit
  - "01:00:00"
- - TimeMin
  - N/A
- - UserId
  - alice(1000)
- - WorkDir
  - /home/alice
