tests/snapshots/parser_snapshots__parse_sinfo_nodes_cluster.snap
---
source: tests/parser_snapshots.rs
expression: nodes
---
- name: cpu-node-01
  state: mixed
  cpus_alloc: 18
  cpus_idle: 14
  cpus_other: 0
  cpus_total: 32
  memory_mb: 192000
  free_mem_mb: 90000
  gres: ~
  partition: "cpu,debug"
- name: cpu-node-02
  state: allocated
  cpus_alloc: 32
  cpus_idle: 0
  cpus_other: 0
  cpus_total: 32
  memory_mb: 192000
  free_mem_mb: 2000
  gres: ~
  partition: cpu
- name: cpu-node-03
  state: idle
  cpus_alloc: 0
  cpus_idle: 32
  cpus_other: 0
  cpus_total: 32
  memory_mb: 192000
  free_mem_mb: 188000
  gres: ~
  partition: cpu
- name: gpu-node-01
  state: mixed
  cpus_alloc: 16
  cpus_idle: 16
  cpus_other: 0
  cpus_total: 32
  memory_mb: 512000
  free_mem_mb: 220000
  gres: "gpu:a100:4"
  partition: gpu
- name: gpu-node-02
  state: allocated
  cpus_alloc: 32
  cpus_idle: 0
  cpus_other: 0
  cpus_total: 32
  memory_mb: 512000
  free_mem_mb: 8000
  gres: "gpu:a100:4"
  partition: gpu
- name: gpu-node-03
  state: mixed
  cpus_alloc: 8
  cpus_idle: 24
  cpus_other: 0
  cpus_total: 32
  memory_mb: 512000
  free_mem_mb: 300000
  gres: "gpu:h100:8"
  partition: gpu
- name: bigmem-node-01
  state: idle
  cpus_alloc: 0
  cpus_idle: 64
  cpus_other: 0
  cpus_total: 64
  memory_mb: 2048000
  free_mem_mb: 2040000
  gres: ~
  partition: bigmem
- name: drain-node-01
  state: drained
  cpus_alloc: 0
  cpus_idle: 0
  cpus_other: 32
  cpus_total: 32
  memory_mb: 192000
  free_mem_mb: 190000
  gres: ~
  partition: cpu
- name: down-node-01
  state: down
  cpus_alloc: 0
  cpus_idle: 0
  cpus_other: 32
  cpus_total: 32
  memory_mb: 192000
  free_mem_mb: 0
  gres: ~
  partition: long
