tests/snapshots/parser_snapshots__parse_squeue_array_jobs.snap
---
source: tests/parser_snapshots.rs
expression: jobs
---
- job_id: 23673084_1
  array_job_id: "23673084"
  array_task_id: 1
  name: array_task
  user: carol
  partition: gpu
  state: Running
  time_limit: ~
  time_used: "1:15"
  submit_time: ~
  start_time: ~
  end_time: ~
  nodes: ~
  node_list: node03
  cpus: ~
  memory: ~
  working_dir: ~
  std_out: ~
  std_err: ~
  exit_code: ~
  reason: ~
- job_id: 23673084_2
  array_job_id: "23673084"
  array_task_id: 2
  name: array_task
  user: carol
  partition: gpu
  state: Running
  time_limit: ~
  time_used: "1:14"
  submit_time: ~
  start_time: ~
  end_time: ~
  nodes: ~
  node_list: node04
  cpus: ~
  memory: ~
  working_dir: ~
  std_out: ~
  std_err: ~
  exit_code: ~
  reason: ~
- job_id: 23673084_3
  array_job_id: "23673084"
  array_task_id: 3
  name: array_task
  user: carol
  partition: gpu
  state: Pending
  time_limit: ~
  time_used: "0:00"
  submit_time: ~
  start_time: ~
  end_time: ~
  nodes: ~
  node_list: (null)
  cpus: ~
  memory: ~
  working_dir: ~
  std_out: ~
  std_err: ~
  exit_code: ~
  reason: ~
- job_id: 23673084_4
  array_job_id: "23673084"
  array_task_id: 4
  name: array_task
  user: carol
  partition: gpu
  state: Pending
  time_limit: ~
  time_used: "0:00"
  submit_time: ~
  start_time: ~
  end_time: ~
  nodes: ~
  node_list: (null)
  cpus: ~
  memory: ~
  working_dir: ~
  std_out: ~
  std_err: ~
  exit_code: ~
  reason: ~
- job_id: "99999"
  array_job_id: ~
  array_task_id: ~
  name: solo_job
  user: dave
  partition: compute
  state: Running
  time_limit: ~
  time_used: "0:42"
  submit_time: ~
  start_time: ~
  end_time: ~
  nodes: ~
  node_list: node05
  cpus: ~
  memory: ~
  working_dir: ~
  std_out: ~
  std_err: ~
  exit_code: ~
  reason: ~
