tests/snapshots/parser_snapshots__parse_squeue_basic.snap
---
source: tests/parser_snapshots.rs
expression: jobs
---
- job_id: "12345"
  array_job_id: ~
  array_task_id: ~
  name: test_job
  user: alice
  partition: debug
  state: Running
  time_limit: ~
  time_used: "0:30"
  submit_time: ~
  start_time: ~
  end_time: ~
  nodes: ~
  node_list: node01
  cpus: ~
  memory: ~
  working_dir: ~
  std_out: ~
  std_err: ~
  exit_code: ~
  reason: ~
- job_id: "12346"
  array_job_id: ~
  array_task_id: ~
  name: another_job
  user: bob
  partition: debug
  state: Pending
  time_limit: ~
  time_used: "0:00"
  submit_time: ~
  start_time: ~
  end_time: ~
  nodes: ~
  node_list: (null)
  cpus: ~
  memory: ~
  working_dir: ~
  std_out: ~
  std_err: ~
  exit_code: ~
  reason: ~
- job_id: "12347"
  array_job_id: ~
  array_task_id: ~
  name: quick_task
  user: alice
  partition: gpu
  state: Running
  time_limit: ~
  time_used: "5:23"
  submit_time: ~
  start_time: ~
  end_time: ~
  nodes: ~
  node_list: node02
  cpus: ~
  memory: ~
  working_dir: ~
  std_out: ~
  std_err: ~
  exit_code: ~
  reason: ~
