tests/snapshots/parser_snapshots__parse_squeue_cluster.snap
---
source: tests/parser_snapshots.rs
expression: jobs
---
- job_id: "48201"
  array_job_id: ~
  array_task_id: ~
  name: train_resnet
  user: alice
  partition: gpu
  state: Running
  time_limit: ~
  time_used: "1:42:09"
  submit_time: ~
  start_time: ~
  end_time: ~
  nodes: ~
  node_list: gpu-node-01
  cpus: ~
  memory: ~
  working_dir: ~
  std_out: ~
  std_err: ~
  exit_code: ~
  reason: ~
- job_id: "48202"
  array_job_id: ~
  array_task_id: ~
  name: train_bert
  user: bob
  partition: gpu
  state: Pending
  time_limit: ~
  time_used: "0:00"
  submit_time: ~
  start_time: ~
  end_time: ~
  nodes: ~
  node_list: (null)
  cpus: ~
  memory: ~
  working_dir: ~
  std_out: ~
  std_err: ~
  exit_code: ~
  reason: ~
- job_id: 48210_1
  array_job_id: "48210"
  array_task_id: 1
  name: sweep
  user: carol
  partition: gpu
  state: Running
  time_limit: ~
  time_used: "12:04"
  submit_time: ~
  start_time: ~
  end_time: ~
  nodes: ~
  node_list: gpu-node-03
  cpus: ~
  memory: ~
  working_dir: ~
  std_out: ~
  std_err: ~
  exit_code: ~
  reason: ~
- job_id: 48210_2
  array_job_id: "48210"
  array_task_id: 2
  name: sweep
  user: carol
  partition: gpu
  state: Pending
  time_limit: ~
  time_used: "0:00"
  submit_time: ~
  start_time: ~
  end_time: ~
  nodes: ~
  node_list: (null)
  cpus: ~
  memory: ~
  working_dir: ~
  std_out: ~
  std_err: ~
  exit_code: ~
  reason: ~
- job_id: 48210_3
  array_job_id: "48210"
  array_task_id: 3
  name: sweep
  user: carol
  partition: gpu
  state: Pending
  time_limit: ~
  time_used: "0:00"
  submit_time: ~
  start_time: ~
  end_time: ~
  nodes: ~
  node_list: (null)
  cpus: ~
  memory: ~
  working_dir: ~
  std_out: ~
  std_err: ~
  exit_code: ~
  reason: ~
- job_id: 48210_4
  array_job_id: "48210"
  array_task_id: 4
  name: sweep
  user: carol
  partition: gpu
  state: Pending
  time_limit: ~
  time_used: "0:00"
  submit_time: ~
  start_time: ~
  end_time: ~
  nodes: ~
  node_list: (null)
  cpus: ~
  memory: ~
  working_dir: ~
  std_out: ~
  std_err: ~
  exit_code: ~
  reason: ~
- job_id: "48215"
  array_job_id: ~
  array_task_id: ~
  name: preprocess
  user: alice
  partition: cpu
  state: Running
  time_limit: ~
  time_used: "4:20"
  submit_time: ~
  start_time: ~
  end_time: ~
  nodes: ~
  node_list: cpu-node-01
  cpus: ~
  memory: ~
  working_dir: ~
  std_out: ~
  std_err: ~
  exit_code: ~
  reason: ~
- job_id: "48221"
  array_job_id: ~
  array_task_id: ~
  name: low_prio_sim
  user: carol
  partition: cpu
  state: Running
  time_limit: ~
  time_used: "8:11"
  submit_time: ~
  start_time: ~
  end_time: ~
  nodes: ~
  node_list: cpu-node-02
  cpus: ~
  memory: ~
  working_dir: ~
  std_out: ~
  std_err: ~
  exit_code: ~
  reason: ~
- job_id: "48220"
  array_job_id: ~
  array_task_id: ~
  name: big_matrix
  user: bob
  partition: bigmem
  state: Pending
  time_limit: ~
  time_used: "0:00"
  submit_time: ~
  start_time: ~
  end_time: ~
  nodes: ~
  node_list: (null)
  cpus: ~
  memory: ~
  working_dir: ~
  std_out: ~
  std_err: ~
  exit_code: ~
  reason: ~
- job_id: "48230"
  array_job_id: ~
  array_task_id: ~
  name: stage1
  user: alice
  partition: cpu
  state: Running
  time_limit: ~
  time_used: "0:33"
  submit_time: ~
  start_time: ~
  end_time: ~
  nodes: ~
  node_list: cpu-node-01
  cpus: ~
  memory: ~
  working_dir: ~
  std_out: ~
  std_err: ~
  exit_code: ~
  reason: ~
- job_id: "48231"
  array_job_id: ~
  array_task_id: ~
  name: stage2
  user: alice
  partition: cpu
  state: Pending
  time_limit: ~
  time_used: "0:00"
  submit_time: ~
  start_time: ~
  end_time: ~
  nodes: ~
  node_list: (null)
  cpus: ~
  memory: ~
  working_dir: ~
  std_out: ~
  std_err: ~
  exit_code: ~
  reason: ~
- job_id: "48240"
  array_job_id: ~
  array_task_id: ~
  name: smoke_test
  user: dave
  partition: debug
  state: Running
  time_limit: ~
  time_used: "0:05"
  submit_time: ~
  start_time: ~
  end_time: ~
  nodes: ~
  node_list: cpu-node-01
  cpus: ~
  memory: ~
  working_dir: ~
  std_out: ~
  std_err: ~
  exit_code: ~
  reason: ~
